add styles to register page

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,8 @@ $gray0: #f4f6f8;
 $gray1: #d8dadb;
 $gray2: #737475;
 $gray3: #414242;
+$error-text: #991b1b;
+$error-bg: #fef2f2;
 
 %button-primary {
   background-color: $gray3;
