--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -40,6 +40,15 @@
       @extend %button-secondary;
       margin-bottom: 16px;
     }
+
+    .error-message {
+      width: auto;
+      border-radius: 8px;
+      padding: 14px 32px;
+      background-color: $error-bg;
+      color: $error-text;
+      margin: -20px 0 20px;
+    }
   }
 }
 
