--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,10 @@ $gray3: #414242;
 $error-text: #991b1b;
 $error-bg: #fef2f2;
 
+// Focus Shadow
+$focus-shadow: rgba(65, 66, 66, 0) 0px 0px 0px 1px, rgba(59, 130, 246, 0.5) 0px 0px 0px 2px;
+// $focus-shadow: rgba(255, 255, 255, 1) 0px 0px 0px 2px, $gray3 0px 0px 0px 3px;
+
 %button-primary {
   background-color: $gray3;
   display: flex;
@@ -28,8 +32,7 @@ $error-bg: #fef2f2;
 
 %button-primary:focus {
   outline: none;
-  box-shadow: rgba(65, 66, 66, 0) 0px 0px 0px 1px, rgba(59, 130, 246, 0.5) 0px 0px 0px 2px;
-  // box-shadow: rgba(255, 255, 255, 1) 0px 0px 0px 2px, $gray3 0px 0px 0px 4px;
+  box-shadow: $focus-shadow;
 }
 
 %button-secondary {
@@ -70,10 +73,10 @@ $error-bg: #fef2f2;
   input:focus {
     outline: none;
     border: 1px solid $gray3;
-    // box-shadow: rgba(255, 255, 255, 1) 0px 0px 0px 2px, $gray3 0px 0px 0px 3px;
-    box-shadow: rgba(65, 66, 66, 0) 0px 0px 0px 1px, rgba(59, 130, 246, 0.5) 0px 0px 0px 2px;
+    box-shadow: $focus-shadow;
   }
 }
+
 %text-input:focus-within {
   color: $gray3;
 }
