--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,9 +7,10 @@ $gray3: #414242;
 $error-text: #991b1b;
 $error-bg: #fef2f2;
 
-// Focus Shadow
+// Shadows
 $focus-shadow: rgba(65, 66, 66, 0) 0px 0px 0px 1px, rgba(59, 130, 246, 0.5) 0px 0px 0px 2px;
 // $focus-shadow: rgba(255, 255, 255, 1) 0px 0px 0px 2px, $gray3 0px 0px 0px 3px;
+$card-shadow: 0px 9px 15px -9px rgba(0, 0, 0, 0.12);
 
 %button-primary {
   background-color: $gray3;
