--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,6 +1,9 @@
 @import './variables.scss';
 
 .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
   background-color: $white;
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.17);
 
@@ -9,6 +12,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 14.5px 32px;
+    max-width: 1250px;
+    margin: 0 auto;
 
     .nav-menu-left {
       display: flex;
@@ -98,7 +103,7 @@
         flex-direction: column;
         justify-content: start;
         background-color: $gray3;
-        width: 100vw;
+        width: 100%;
         text-align: center;
         opacity: 1;
         transition: all 0.2s;
