--- a/src/styles/robots.scss
+++ b/src/styles/robots.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 40px;
-  margin: 0 auto;
+  margin: 80px auto;
   justify-content: center;
   max-width: 1250px;
 }
@@ -21,8 +21,6 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, max-content));
   justify-items: center;
   max-width: 1248px;
-  // display: grid;
-  // grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   column-gap: 24px;
   row-gap: 45px;
   max-width: 1248px;
@@ -65,6 +63,7 @@
 
 .button-primary {
   @extend %button-primary;
+  width: 150px;
 }
 
 @media only screen and (max-width: 1327px) {
@@ -80,8 +79,16 @@
 }
 
 @media only screen and (max-width: 420px) {
+  .wrapper {
+    padding: 0;
+  }
+
+  .title {
+    margin-left: 32px;
+  }
+
   .robot-card-container {
-    margin: 0 -24px;
+    padding: 0 8px;
     grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
   }
 }
