--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -1,10 +1,27 @@
 @import './variables.scss';
 
+.button-primary {
+  @extend %button-primary;
+  width: 100%;
+}
+
+.button-secondary {
+  @extend %button-secondary;
+  width: 100%;
+}
+
+.button-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 16px;
+}
+
 .title {
   @extend %robot-card-title;
 }
 
-.robots-wrapper {
+.admin-wrapper {
   @extend %robot-card-wrapper;
 
   .robot-card-container {
@@ -26,11 +43,6 @@
       }
     }
   }
-}
-
-.button-primary {
-  @extend %button-primary;
-  width: 150px;
 }
 
 @media only screen and (max-width: $media-breakpoint-1) {
