--- a/src/styles/results.scss
+++ b/src/styles/results.scss
@@ -78,28 +78,37 @@
 }
 
 @media only screen and (max-width: $media-breakpoint-1) {
-  .wrapper {
+  .results-wrapper {
     max-width: 825px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-2) {
-  .wrapper {
+  .results-wrapper {
     max-width: 400px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-3) {
-  .wrapper {
+  .results-wrapper {
     padding: 0;
-  }
 
-  .title {
-    margin-left: 32px;
-  }
+    .title {
+      margin-left: 32px;
+    }
 
-  .robot-card-container {
-    padding: 0 8px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+    .robot-card-container {
+      padding: 0 8px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+
+      .robot-card {
+        width: 100%;
+
+        .image-container {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
   }
 }
