--- a/src/styles/robots.scss
+++ b/src/styles/robots.scss
@@ -26,36 +26,44 @@
       }
     }
   }
-}
-
-.button-primary {
-  @extend %button-primary;
-  width: 150px;
+  .button-primary {
+    @extend %button-primary;
+    width: 150px;
+  }
 }
 
 @media only screen and (max-width: $media-breakpoint-1) {
-  .wrapper {
+  .robots-wrapper {
     max-width: 825px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-2) {
-  .wrapper {
+  .robots-wrapper {
     max-width: 400px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-3) {
-  .wrapper {
+  .robots-wrapper {
     padding: 0;
-  }
 
-  .title {
-    margin-left: 32px;
-  }
+    .title {
+      margin-left: 32px;
+    }
 
-  .robot-card-container {
-    padding: 0 8px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+    .robot-card-container {
+      padding: 0 8px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+
+      .robot-card {
+        width: 100%;
+
+        .image-container {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
   }
 }
