--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -64,7 +64,7 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
     background-color: $white;
     font-size: 18px;
     margin: 0 0 -6px 23px;
-    z-index: 50;
+    z-index: 1;
     width: max-content;
     padding: 0 4px;
   }
@@ -76,7 +76,7 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
     font-size: 18px;
     font-weight: 400;
     padding: 20px 27px;
-    z-index: 40;
+    // z-index: 0;
   }
 
   input:focus {
@@ -139,8 +139,12 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
 }
 
 %robot-card-image-container {
-  max-height: 321px;
-  max-width: 349px;
+  height: 321px;
+  width: 349px;
+  // max-height: 321px;
+  // max-width: 349px;
+  // min-height: 321px;
+  // min-width: 349px;
   margin-bottom: 36px;
 }
 %robot-card-img {
