--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -21,13 +21,19 @@
     img {
       max-width: 233px;
       height: auto;
-      margin: 0 0 80px;
+      margin: 0 0 84px;
       align-self: center;
+    }
+
+    .input-container {
+      height: 77px;
+      margin-bottom: 40px;
+      display: block;
+      padding: 2px 0 0;
     }
 
     .text-input {
       @extend %text-input;
-      margin-bottom: 40px;
     }
 
     .button-primary {
