--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -177,6 +177,52 @@
   }
 }
 
+.added-robot-confirmation {
+  animation: fade ease-in-out 3.1s;
+  position: fixed;
+  inset: 0;
+  height: 100vh;
+  width: 100vw;
+
+  div {
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 36px;
+    padding: 14px 20px;
+    border-radius: 14px;
+    background-color: #ecfdf5;
+    color: #065f46;
+    // border: 1px solid #065f46;
+    // background-color: #22744a;
+    // color: $white;
+
+    svg {
+      height: 36px;
+      width: 36px;
+      margin-left: 12px;
+    }
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @media only screen and (max-width: $media-breakpoint-1) {
   .admin-wrapper {
     max-width: 825px;
