--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -192,13 +192,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 36px;
-    padding: 14px 20px;
+    padding: 20px 20px;
     border-radius: 14px;
-    background-color: #ecfdf5;
-    color: #065f46;
-    // border: 1px solid #065f46;
-    // background-color: #22744a;
-    // color: $white;
+    background-color: $gray1;
+    color: $gray3;
+    white-space: nowrap;
 
     svg {
       height: 36px;
