--- a/src/styles/Results.module.scss
+++ b/src/styles/Results.module.scss
@@ -3,13 +3,13 @@
 .results {
   width: 100%;
 
-  .vote-count {
+  .voteCount {
     margin: 0 0 18px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 
-    .robot-votes {
+    .robotVotes {
       font-size: 40px;
       font-weight: 700;
       color: $gray3;
@@ -24,7 +24,7 @@
       line-height: 22px;
     }
 
-    .total-votes {
+    .totalVotes {
       font-size: 22px;
       font-weight: 700;
       color: $gray2;
@@ -32,14 +32,14 @@
     }
   }
 
-  .progress-bar-container {
+  .progressBarContainer {
     width: 100%;
     height: 29px;
     border: 2px solid $gray1;
     border-radius: 8px;
     padding: 2px;
 
-    .progress-bar {
+    .progressBar {
       background-color: $gray3;
       border-radius: 5px;
       height: 29px;
@@ -47,17 +47,17 @@
   }
 }
 
-.title {
-  @extend %robot-card-title;
-}
-
-.results-wrapper {
+.resultsWrapper {
   @extend %robot-card-wrapper;
 
-  .robot-card-container {
+  .title {
+    @extend %robot-card-title;
+  }
+
+  .robotCardContainer {
     @extend %robot-card-container;
 
-    .robot-card {
+    .robotCard {
       @extend %robot-card;
 
       h2 {
@@ -65,7 +65,7 @@
         margin: 0 0 16px;
       }
 
-      .image-container {
+      .imageContainer {
         @extend %robot-card-image-container;
         margin-bottom: 16px;
 
@@ -78,33 +78,33 @@
 }
 
 @media only screen and (max-width: $media-breakpoint-1) {
-  .results-wrapper {
+  .resultsWrapper {
     max-width: 825px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-2) {
-  .results-wrapper {
+  .resultsWrapper {
     max-width: 400px;
   }
 }
 
 @media only screen and (max-width: $media-breakpoint-3) {
-  .results-wrapper {
+  .resultsWrapper {
     padding: 0;
 
     .title {
       margin-left: 32px;
     }
 
-    .robot-card-container {
+    .robotCardContainer {
       padding: 0 8px;
       grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
 
-      .robot-card {
+      .robotCard {
         width: 100%;
 
-        .image-container {
+        .imageContainer {
           width: 100%;
           height: auto;
         }
