--- a/src/styles/Results.module.scss
+++ b/src/styles/Results.module.scss
@@ -107,6 +107,7 @@
         .imageContainer {
           width: 100%;
           height: auto;
+          max-height: 349px;
         }
       }
     }
