--- a/src/styles/Robots.module.scss
+++ b/src/styles/Robots.module.scss
@@ -63,6 +63,7 @@
         .imageContainer {
           width: 100%;
           height: auto;
+          max-height: 349px;
         }
       }
     }
