--- a/src/styles/Loading.module.scss
+++ b/src/styles/Loading.module.scss
@@ -2,7 +2,7 @@
 
 .loading {
   background-color: rgba(115, 116, 117, 0.5);
-  position: absolute;
+  position: fixed;
   inset: 0;
   height: 100vh;
   width: 100vw;
