--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -61,6 +61,9 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
   flex-direction: column;
   color: $gray2;
   margin: 12px 0 58px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
   label {
     background-color: $white;
@@ -77,12 +80,19 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
     font-size: 18px;
     font-weight: 400;
     padding: 20px 27px;
+    -webkit-appearance: none;
   }
 
   input:focus {
     outline: none;
     border: 1px solid $gray3;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-shadow: $focus-shadow;
+    -moz-box-shadow: $focus-shadow;
+    -webkit-box-shadow: $focus-shadow;
+    -webkit-appearance: none;
   }
 }
 
