--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -156,6 +156,8 @@ $card-shadow: 0px 9px 15px 0px rgba(0, 0, 0, 0.12);
 %robot-card-img {
   height: 100%;
   width: 100%;
+  max-height: 321px;
+  max-width: 349px;
   object-fit: contain;
   object-position: center;
 }
