add animation to progress bar

--- a/src/styles/Results.module.scss
+++ b/src/styles/Results.module.scss
@@ -43,6 +43,10 @@
       background-color: $gray3;
       border-radius: 5px;
       height: 29px;
+      -webkit-transition: width 1s ease-in-out;
+      -moz-transition: width 1s ease-in-out;
+      -o-transition: width 1s ease-in-out;
+      transition: width 1s ease-in-out;
     }
   }
 }
